# 6DRepnet360_tensorrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Win_README.md
src/: main.cpp
src/algos/: algo_logger.cpp  algo_logger.hpp  det_structs.hpp  sixd_repnet360.cpp  sixd_repnet360.hpp  yolo11_head.cpp  yolo11_head.hpp
src/demos/: head_det.cpp  head_det_video.cpp  pose_est.cpp  pose_est_video.cpp
src/nvprocess/: ex_marcos.h  img_precess.cpp  img_precess.hpp  img_precess_k.cu  img_precess_k.hpp  trt_logger.cpp  trt_logger.hpp  trt_runner_v2.cpp  trt_runner_v2.hpp  trt_runner_v3.hpp
tool/: 6d_repnet360_export_onnx.py  attatch_nms_plugin.py  nms_plugin_config.yml  onnx2trt.sh  yolo11_head_export_onnx.py
